--- a/src/App.css
+++ b/src/App.css
@@ -72,5 +72,9 @@ input:focus,
 input:active,
 button:focus,
 button:active {
-  color: red;
+  outline: none;
+}
+
+.highlight {
+  background-color: #56cbdb;
 }
